--- a/style.css
+++ b/style.css
@@ -133,7 +133,7 @@ p{
 .explore{
     width: 100%;
     height: 100vh;
-    background-image: url('./img/img02.png');
+    background-image: url('img02.png');
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
